Harden HUD USB recovery and shutdown
Bound root USB operations, move port reset off the render thread, stop workers safely, validate map databases, and reject oversized decoded assets.